--- a/abc.templates/base-workflows/spec.yaml
+++ b/abc.templates/base-workflows/spec.yaml
@@ -23,6 +23,8 @@ inputs:
     default: '.'
   - name: 'terraform_version'
     desc: 'The Terraform version to use'
+  - name: 'tagrep_version'
+    desc: 'The Tagrep version to use. See https://github.com/abcxyz/tagrep/releases'
   - name: 'guardian_wif_provider'
     desc: 'The Google Cloud workload identity federation provider for Guardian'
   - name: 'guardian_service_account'
@@ -53,6 +55,8 @@ steps:
           with: '{{.terraform_directory}}'
         - to_replace: 'REPLACE_TERRAFORM_VERSION'
           with: '{{.terraform_version}}'
+        - to_replace: 'REPLACE_TAGREP_VERSION'
+          with: '{{.tagrep_version}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_PROVIDER'
           with: '{{.guardian_wif_provider}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
