--- a/abc.templates/base-workflows/testdata/golden/basic/test.yaml
+++ b/abc.templates/base-workflows/testdata/golden/basic/test.yaml
@@ -21,6 +21,8 @@ inputs:
     value: '.'
   - name: 'terraform_version'
     value: '1.7.4'
+  - name: 'tagrep_version'
+    value: '0.0.5'
   - name: 'guardian_wif_provider'
     value: 'my-guardian-wif-provider'
   - name: 'guardian_service_account'
