--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-merge-check.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-merge-check.yml
@@ -36,7 +36,7 @@ concurrency:
 env:
   GUARDIAN_VERSION: '1.0.0'
   GUARDIAN_TERRAFORM_VERSION: '1.7.4'
-  TAGREP_VERSION: '0.0.5'
+  TAGREP_VERSION: '0.0.7'
 
 jobs:
   merge_check:
@@ -80,7 +80,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           TAGREP_LOG_TARGET: 'STDERR'
         run: |
-          tags="$(tagrep parse -type=request -format=raw -duplicate-key-strategy=array -array-fields=GUARDIAN_DIRS 2> tagrep.log)"
+          tags="$(tagrep parse -type=request -format=raw -array-tags=GUARDIAN_DIRS 2> tagrep.log)"
           cat tagrep.log
           echo "tags -> $tags"
           echo "$tags" >> "$GITHUB_ENV"
