--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-plan.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-plan.yml
@@ -40,7 +40,7 @@ env:
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'my-guardian-service-account@abcxyz-my-project.iam.gserviceaccount.com'
   GUARDIAN_BUCKET_NAME: 'my-guardian-state-bucket'
   GUARDIAN_TERRAFORM_VERSION: '1.7.4'
-  TAGREP_VERSION: '0.0.5'
+  TAGREP_VERSION: '0.0.7'
 
 jobs:
   init:
@@ -97,7 +97,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           TAGREP_LOG_TARGET: 'STDERR'
         run: |
-          tags="$(tagrep parse -type=request -format=raw -duplicate-key-strategy=array -array-fields=GUARDIAN_DIRS 2> tagrep.log)"
+          tags="$(tagrep parse -type=request -format=raw -array-tags=GUARDIAN_DIRS 2> tagrep.log)"
           cat tagrep.log
           echo "tags -> $tags"
           echo "$tags" >> "$GITHUB_ENV"
