--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'lint_test'
+name: 'ci'
 
 on:
   push:
@@ -31,30 +31,5 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Linting jobs - go, terraform.
-  go_lint:
-    uses: 'abcxyz/pkg/.github/workflows/go-lint.yml@main' # ratchet:exclude
-
-  terraform_lint:
-    uses: 'abcxyz/pkg/.github/workflows/terraform-lint.yml@main' # ratchet:exclude
-    with:
-      directory: 'terraform'
-      terraform_version: '1.6.6'
-
-  yaml_lint:
-    uses: 'abcxyz/pkg/.github/workflows/yaml-lint.yml@main' # ratchet:exclude
-
-  # Unit tests - go
   go_test:
     uses: 'abcxyz/pkg/.github/workflows/go-test.yml@main' # ratchet:exclude
-
-  # lint_and_unit is a virtual job that is used as dependencies for later jobs.
-  lint_and_unit:
-    runs-on: 'ubuntu-latest'
-    needs:
-      - 'go_lint'
-      - 'terraform_lint'
-      - 'yaml_lint'
-      - 'go_test'
-    steps:
-      - run: 'echo prechecks complete'
