--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
         run: |
           rm -f ./.github/workflow/*
           abc templates render \
+            -skip-manifest \
             -input=terraform_version="${{ env.GUARDIAN_TERRAFORM_VERSION }}" \
             -input=tagrep_version="${{ env.GUARDIAN_TAGREP_VERSION }}" \
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
@@ -74,6 +75,7 @@ jobs:
             -accept-defaults \
             "github.com/abcxyz/guardian/abc.templates/base-workflows@${REF}"
           abc templates render \
+            -skip-manifest \
             -input=gcp_organization_id="00000000" \
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
@@ -109,6 +111,7 @@ jobs:
         run: |
           rm -f ./.github/workflow/*
           abc templates render \
+            -skip-manifest \
             -input=terraform_version="${{ env.GUARDIAN_TERRAFORM_VERSION }}" \
             -input=tagrep_version="${{ env.GUARDIAN_TAGREP_VERSION }}" \
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
@@ -117,6 +120,7 @@ jobs:
             -accept-defaults \
             "github.com/abcxyz/guardian/abc.templates/base-workflows@${REF}"
           abc templates render \
+            -skip-manifest \
             -input=gcp_organization_id="00000000" \
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
