chore: no fetch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,6 @@ jobs:
 
       - name: 'render templates'
         shell: 'bash'
-        env:
-          REF: '${{ github.sha }}'
         run: |
           rm -f ./.github/workflow/*
           abc templates render \
@@ -73,14 +71,14 @@ jobs:
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
             -input=guardian_state_bucket="${{ env.GUARDIAN_BUCKET_NAME }}" \
             -accept-defaults \
-            "github.com/abcxyz/guardian/abc.templates/base-workflows@${REF}"
+            ./abc.templates/base-workflows
           abc templates render \
             -skip-manifest \
             -input=gcp_organization_id="00000000" \
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
             -accept-defaults \
-            "github.com/abcxyz/guardian/abc.templates/drift-workflows@${REF}"
+            ./abc.templates/drift-workflows
 
       - name: 'lint ratchet'
         uses: 'sethvargo/ratchet@main' # ratchet:exclude
@@ -106,8 +104,6 @@ jobs:
 
       - name: 'render templates'
         shell: 'bash'
-        env:
-          REF: '${{ github.sha }}'
         run: |
           rm -f ./.github/workflow/*
           abc templates render \
@@ -118,14 +114,14 @@ jobs:
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
             -input=guardian_state_bucket="${{ env.GUARDIAN_BUCKET_NAME }}" \
             -accept-defaults \
-            "github.com/abcxyz/guardian/abc.templates/base-workflows@${REF}"
+            ./abc.templates/base-workflows
           abc templates render \
             -skip-manifest \
             -input=gcp_organization_id="00000000" \
             -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
             -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
             -accept-defaults \
-            "github.com/abcxyz/guardian/abc.templates/drift-workflows@${REF}"
+            ./abc.templates/drift-workflows
 
       - name: 'lint actions'
         uses: 'abcxyz/actions/.github/actions/lint-github-actions@main' # ratchet:exclude
