--- a/abc.templates/base-workflows/contents/workflows/guardian-admin.yml
+++ b/abc.templates/base-workflows/contents/workflows/guardian-admin.yml
@@ -88,13 +88,13 @@ jobs:
         id: 'opa_eval'
         shell: 'bash'
         run: |-
-          DECISION=$(opa eval \
+          DECISION="$(opa eval \
             --format raw \
             --input ./workflow_dispatch_inputs.json \
             --data ./policy/guardian/admin \
             --data ./guardian_policy_context.json \
-            "data.guardian.admin")
-          echo "$DECISION" > policy_results.json
+            "data.guardian.admin")"
+          echo "${DECISION}" > policy_results.json
 
       - name: 'Enforce Policy'
         shell: 'bash'
@@ -103,7 +103,7 @@ jobs:
         run: |-
           guardian policy enforce \
             -reporter=none \
-            -dir=${DIRECTORY} \
+            -dir="${DIRECTORY}" \
             -results-file=policy_results.json
 
       - name: 'Guardian Directories'
@@ -115,7 +115,7 @@ jobs:
         run: |-
           DIRECTORIES=$(guardian entrypoints -dir="${ENTRYPOINT}" -reporter=none)
           echo "entrypoints -> ${DIRECTORIES}"
-          echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
+          echo "directories=${DIRECTORIES}" >> "${GITHUB_OUTPUT}"
 
   admin:
     if: |
