--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-run.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-run.yml
@@ -32,7 +32,7 @@ on:
     inputs:
       command:
         description: 'COMMAND - The Terraform command to run.'
-        required: true
+        required: false
         type: 'string'
         default: 'plan'
       entrypoint:
