--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
   go_test:
     uses: 'abcxyz/actions/.github/workflows/go-test.yml@main' # ratchet:exclude
 
-  ratchet_lint_templates:
+  lint_templates:
     runs-on: 'ubuntu-latest'
     steps:
       - name: 'Checkout'
@@ -81,47 +81,25 @@ jobs:
             ./abc.templates/drift-workflows
 
       - name: 'lint ratchet'
+        if: |
+          always()
         uses: 'sethvargo/ratchet@main' # ratchet:exclude
         with:
           files: './.github/workflows/*.yml'
 
-  actions_lint_templates:
-    runs-on: 'ubuntu-latest'
-    steps:
-      - name: 'Checkout'
-        uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
-        with:
-          fetch-depth: 1 # shallow clone
-
-      - name: 'Setup abc'
-        uses: 'abcxyz/pkg/.github/actions/setup-binary@1d1cedf7768d17dde23bb2cda24bc1fb950e9f92' # ratchet:abcxyz/pkg/.github/actions/setup-binary@main
-        with:
-          download_url: 'https://github.com/abcxyz/abc/releases/download/v${{ env.ABC_CLI_VERSION }}/abc_${{ env.ABC_CLI_VERSION }}_linux_amd64.tar.gz'
-          install_path: '${{ runner.temp }}/.abc'
-          binary_subpath: 'abc'
-          cache_key: '${{ runner.os }}_${{ runner.arch }}_abc_${{ env.ABC_CLI_VERSION }}'
-          add_to_path: true
-
-      - name: 'render templates'
-        shell: 'bash'
-        run: |
-          rm -f ./.github/workflow/*
-          abc templates render \
-            -skip-manifest \
-            -input=terraform_version="${{ env.GUARDIAN_TERRAFORM_VERSION }}" \
-            -input=tagrep_version="${{ env.GUARDIAN_TAGREP_VERSION }}" \
-            -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
-            -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
-            -input=guardian_state_bucket="${{ env.GUARDIAN_BUCKET_NAME }}" \
-            -accept-defaults \
-            ./abc.templates/base-workflows
-          abc templates render \
-            -skip-manifest \
-            -input=gcp_organization_id="00000000" \
-            -input=guardian_wif_provider="${{ env.GUARDIAN_WIF_PROVIDER }}" \
-            -input=guardian_service_account="${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}" \
-            -accept-defaults \
-            ./abc.templates/drift-workflows
-
       - name: 'lint actions'
+        if: |
+          always()
         uses: 'abcxyz/actions/.github/actions/lint-github-actions@main' # ratchet:exclude
+
+      - name: 'Verify golden tests base-workflows'
+        if: |
+          always()
+        run: |
+          abc golden-test verify ./abc.templates/base-workflows/
+
+      - name: 'Verify golden tests drift-workflows'
+        if: |
+          always()
+        run: |
+          abc golden-test verify ./abc.templates/drift-workflows/
