--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-admin.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-admin.yml
@@ -26,7 +26,7 @@ on:
         required: true
       entrypoint:
         description: 'ENTRYPOINT - The directory to search for all child directories containing Terraform configurations. If left blank, the Terraform command will run for all configured directories.'
-        default: 'REPLACE_TERRAFORM_DIRECTORY'
+        default: '.'
         type: 'string'
 
 # only one admin should run at a time
@@ -34,10 +34,10 @@ concurrency:
   group: '${{ github.workflow }}'
 
 env:
-  GUARDIAN_VERSION: 'REPLACE_GUARDIAN_VERSION_TAG'
-  GUARDIAN_WIF_PROVIDER: 'REPLACE_GUARDIAN_WIF_PROVIDER'
-  GUARDIAN_WIF_SERVICE_ACCOUNT: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
-  GUARDIAN_TERRAFORM_VERSION: 'REPLACE_TERRAFORM_VERSION'
+  GUARDIAN_VERSION: '1.0.0'
+  GUARDIAN_WIF_PROVIDER: 'my-guardian-wif-provider'
+  GUARDIAN_WIF_SERVICE_ACCOUNT: 'my-guardian-service-account@abcxyz-my-project.iam.gserviceaccount.com'
+  GUARDIAN_TERRAFORM_VERSION: '1.7.4'
 
 jobs:
   init:
