--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-run.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-run.yml
@@ -12,9 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Guardian run is used to run Terraform commands as the privileged service account.
-# Due to the sensitive nature of the access this account has, this workflow is
-# restricted to a set of users defined by Rego policy.
+# Guardian run is used to run Terraform commands that are most often used
+# to fix state after a failed workflow or get outputs for a given module
+# directory. Any user with write permissions on the repo can run this workflow.
 name: 'guardian_run'
 run-name: 'guardian_run - [${{ inputs.command }}] [${{ inputs.entrypoint }}]'
 
@@ -22,24 +22,41 @@ on:
   workflow_dispatch:
     inputs:
       command:
-        description: 'COMMAND - The Terraform command to run along with any arguments, e.g. plan -input=false, apply -auto-approve, etc.'
+        description: 'COMMAND - The Terraform command to run.'
         required: true
+        type: 'choice'
+        default: 'plan'
+        options:
+          - 'plan'
+          - 'apply'
+          - 'output'
       entrypoint:
         description: 'ENTRYPOINT - The directory to search for all child directories containing Terraform configurations. If left blank, the Terraform command will run for all configured directories.'
         default: '.'
         type: 'string'
+      detailed-exitcode:
+        description: 'DETAILED-EXITCODE (usually false) - The value of the -detailed-exitcode flag for "terraform plan", which causes a nonempty diff to return a status code of 2; ignored for other commands besides "plan".'
+        type: 'boolean'
+        default: false
+        required: false
   workflow_call:
     inputs:
       command:
         description: 'COMMAND - The Terraform command to run.'
-        required: true
+        required: false
         type: 'string'
         default: 'plan'
       entrypoint:
         description: 'ENTRYPOINT - The directory to search for all child directories containing Terraform configurations. If left blank, the Terraform command will run for all configured directories.'
         default: '.'
         type: 'string'
+      detailed-exitcode:
+        description: 'DETAILED-EXITCODE (usually false) - The value of the -detailed-exitcode flag for "terraform plan", which causes a nonempty diff to return a status code of 2; ignored for other commands besides "plan".'
+        type: 'boolean'
+        default: false
+        required: false
 
+# only one fix should run at a time
 concurrency:
   group: '${{ github.workflow }}'
 
@@ -63,58 +80,13 @@ jobs:
         uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
 
       - name: 'Setup Guardian'
-        uses: 'abcxyz/pkg/.github/actions/setup-binary@90acbb7e25e72c3c7ae2c040244d8468f74f8d96' # ratchet:abcxyz/pkg/.github/actions/setup-binary@main
+        uses: 'abcxyz/pkg/.github/actions/setup-binary@7644ee667d9096d9b8a5741b2676be9394ba0daf' # ratchet:abcxyz/pkg/.github/actions/setup-binary@main
         with:
           download_url: 'https://github.com/abcxyz/guardian/releases/download/v${{ env.GUARDIAN_VERSION }}/guardian_${{ env.GUARDIAN_VERSION }}_linux_amd64.tar.gz'
           install_path: '${{ runner.temp }}/.guardian'
           binary_subpath: 'guardian'
           cache_key: '${{ runner.os }}_${{ runner.arch }}_guardian_${{ env.GUARDIAN_VERSION }}'
           add_to_path: true
-
-      - name: 'Create Inputs File'
-        shell: 'bash'
-        run: |-
-          cat << EOF > workflow_dispatch_inputs.json
-          {
-            "command": "${{ inputs.command }}",
-            "entrypoint": "${{ inputs.entrypoint }}"
-          }
-          EOF
-
-      - name: 'Aggregate Policy Data'
-        shell: 'bash'
-        env:
-          # used to call GitHub API's for data aggregation
-          GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
-        run: |-
-          guardian policy fetch-data
-
-      - name: 'Setup OPA'
-        uses: 'open-policy-agent/setup-opa@34a30e8a924d1b03ce2cf7abe97250bbb1f332b5' # ratchet:open-policy-agent/setup-opa@v2
-        with:
-          version: 'latest'
-
-      - name: 'Evaluate Policy'
-        id: 'opa_eval'
-        shell: 'bash'
-        run: |-
-          DECISION=$(opa eval \
-            --format raw \
-            --input ./workflow_dispatch_inputs.json \
-            --data ./policy/guardian/run \
-            --data ./guardian_policy_context.json \
-            "data.guardian.run")
-          echo "$DECISION" > policy_results.json
-
-      - name: 'Enforce Policy'
-        shell: 'bash'
-        env:
-          GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
-        run: |-
-          guardian policy enforce \
-            -reporter=none \
-            -dir=${DIRECTORY} \
-            -results-file=policy_results.json
 
       - name: 'Guardian Directories'
         id: 'dirs'
@@ -125,7 +97,7 @@ jobs:
         run: |-
           DIRECTORIES=$(guardian entrypoints -dir="${ENTRYPOINT}" -reporter=none)
           echo "entrypoints -> ${DIRECTORIES}"
-          echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
+          echo "directories=${DIRECTORIES}" >> "${GITHUB_OUTPUT}"
 
   run:
     if: |
@@ -143,6 +115,10 @@ jobs:
       max-parallel: 100
       matrix:
         working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
+
+    env:
+      DIRECTORY: '${{ matrix.working_directory }}'
+
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
@@ -154,7 +130,7 @@ jobs:
           service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
       - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@cedf5136321da85745811c74c063c19675bfa904' # ratchet:abcxyz/secure-setup-terraform@main
+        uses: 'abcxyz/secure-setup-terraform@d7faa07b1d4ef4b4ce52c5c820227c81bdaa18f1' # ratchet:abcxyz/secure-setup-terraform@main
         with:
           terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
           terraform_module_location: './${{ matrix.working_directory }}'
@@ -163,7 +139,7 @@ jobs:
           terraform_wrapper: false
 
       - name: 'Setup Guardian'
-        uses: 'abcxyz/pkg/.github/actions/setup-binary@90acbb7e25e72c3c7ae2c040244d8468f74f8d96' # ratchet:abcxyz/pkg/.github/actions/setup-binary@main
+        uses: 'abcxyz/pkg/.github/actions/setup-binary@7644ee667d9096d9b8a5741b2676be9394ba0daf' # ratchet:abcxyz/pkg/.github/actions/setup-binary@main
         with:
           download_url: 'https://github.com/abcxyz/guardian/releases/download/v${{ env.GUARDIAN_VERSION }}/guardian_${{ env.GUARDIAN_VERSION }}_linux_amd64.tar.gz'
           install_path: '${{ runner.temp }}/.guardian'
@@ -171,9 +147,25 @@ jobs:
           cache_key: '${{ runner.os }}_${{ runner.arch }}_guardian_${{ env.GUARDIAN_VERSION }}'
           add_to_path: true
 
-      - name: 'Guardian Run'
-        env:
-          DIRECTORY: '${{ matrix.working_directory }}'
+      - name: 'Guardian Output'
+        if: |
+          inputs.command == 'output'
         shell: 'bash'
         run: |-
-          guardian run -dir="${DIRECTORY}" -- ${{ inputs.command }}
+          guardian run -dir="${DIRECTORY}" -- output
+
+      - name: 'Guardian Plan'
+        if: |
+          inputs.command == 'plan'
+        env:
+          DETAILED_EXITCODE: '${{ inputs.detailed-exitcode }}'
+        shell: 'bash'
+        run: |-
+          guardian run -dir="${DIRECTORY}" -- plan -input=false -detailed-exitcode="${DETAILED_EXITCODE}"
+
+      - name: 'Guardian Apply'
+        if: |
+          inputs.command == 'apply'
+        shell: 'bash'
+        run: |-
+          guardian run -dir="${DIRECTORY}" -- apply -input=false -auto-approve
