Change workflow path

--- a/abc.templates/base-workflows/contents/workflows/call-guardian-plan.yml
+++ b/abc.templates/base-workflows/contents/workflows/call-guardian-plan.yml
@@ -34,4 +34,4 @@ jobs:
       pull-requests: 'write'
       id-token: 'write'
     name: 'Call reusable guardian plan'
-    uses: 'abcxyz/guardian-staging/.github/workflows/reusable-guardian-plan.yml@main' # ratchet:exclude
+    uses: './.github/workflows/reusable-guardian-plan.yml@main' # ratchet:exclude
