--- a/abc.templates/base-workflows/testdata/golden/basic/test.yaml
+++ b/abc.templates/base-workflows/testdata/golden/basic/test.yaml
@@ -27,6 +27,8 @@ inputs:
     value: 'my-guardian-wif-provider'
   - name: 'guardian_service_account'
     value: 'my-guardian-service-account@abcxyz-my-project.iam.gserviceaccount.com'
+  - name: 'github_repository'
+    value: 'abcxyz/my-repo'
 builtin_vars:
   - name: '_git_tag'
     value: 'v1.0.0'
