fix: order of flags in read
Signed-off-by: Dylan Yurgionas <dcreey@gmail.com>

--- a/abc.templates/base-workflows/contents/workflows/guardian-admin.yml
+++ b/abc.templates/base-workflows/contents/workflows/guardian-admin.yml
@@ -167,5 +167,5 @@ jobs:
           TERRAFORM_CMD: '${{ inputs.command }}'
         shell: 'bash'
         run: |-
-          read -a -r CLI_ARGS <<< "${TERRAFORM_CMD}"
+          read -r -a CLI_ARGS <<< "${TERRAFORM_CMD}"
           guardian run -dir="${DIRECTORY}" -- "${CLI_ARGS[@]}"
